--- a/EFRI Feature Engineering.ipynb
+++ b/EFRI Feature Engineering.ipynb
@@ -49,14 +49,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "2010fc45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[Errno 5] Unable to open file (unable to open file: name = '/run/user/1006/gvfs/smb-share:server=10.162.37.21,share=main/Public/EFRI/1_formatted/SUBJECT07/EFRI07_WAR_SES1_Raw.mat', errno = 5, error message = 'Input/output error', flags = 0, o_flags = 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m data_path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mData/Subject07_snapshot_normalized.npy\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[39m# data_path = '/run/user/1006/gvfs/smb-share:server=10.162.37.21,share=main/Daniel/Data/Trial_by_Chan_by_Freq_by_Time_Snapshots/Subject06_snapshot_normalized.npy'\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m raw_file \u001b[39m=\u001b[39m h5py\u001b[39m.\u001b[39mFile(raw_path)\n\u001b[1;32m      7\u001b[0m setup_data \u001b[39m=\u001b[39m mat73\u001b[39m.\u001b[39mloadmat(setup_path)\n",
+      "File \u001b[0;32m~/miniconda3/envs/ncsl/lib/python3.11/site-packages/h5py/_hl/files.py:533\u001b[0m, in \u001b[0;36mFile.__init__\u001b[0;34m(self, name, mode, driver, libver, userblock_size, swmr, rdcc_nslots, rdcc_nbytes, rdcc_w0, track_order, fs_strategy, fs_persist, fs_threshold, fs_page_size, page_buf_size, min_meta_keep, min_raw_keep, locking, alignment_threshold, alignment_interval, **kwds)\u001b[0m\n\u001b[1;32m    525\u001b[0m     fapl \u001b[39m=\u001b[39m make_fapl(driver, libver, rdcc_nslots, rdcc_nbytes, rdcc_w0,\n\u001b[1;32m    526\u001b[0m                      locking, page_buf_size, min_meta_keep, min_raw_keep,\n\u001b[1;32m    527\u001b[0m                      alignment_threshold\u001b[39m=\u001b[39malignment_threshold,\n\u001b[1;32m    528\u001b[0m                      alignment_interval\u001b[39m=\u001b[39malignment_interval,\n\u001b[1;32m    529\u001b[0m                      \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[1;32m    530\u001b[0m     fcpl \u001b[39m=\u001b[39m make_fcpl(track_order\u001b[39m=\u001b[39mtrack_order, fs_strategy\u001b[39m=\u001b[39mfs_strategy,\n\u001b[1;32m    531\u001b[0m                      fs_persist\u001b[39m=\u001b[39mfs_persist, fs_threshold\u001b[39m=\u001b[39mfs_threshold,\n\u001b[1;32m    532\u001b[0m                      fs_page_size\u001b[39m=\u001b[39mfs_page_size)\n\u001b[0;32m--> 533\u001b[0m     fid \u001b[39m=\u001b[39m make_fid(name, mode, userblock_size, fapl, fcpl, swmr\u001b[39m=\u001b[39mswmr)\n\u001b[1;32m    535\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(libver, \u001b[39mtuple\u001b[39m):\n\u001b[1;32m    536\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_libver \u001b[39m=\u001b[39m libver\n",
+      "File \u001b[0;32m~/miniconda3/envs/ncsl/lib/python3.11/site-packages/h5py/_hl/files.py:226\u001b[0m, in \u001b[0;36mmake_fid\u001b[0;34m(name, mode, userblock_size, fapl, fcpl, swmr)\u001b[0m\n\u001b[1;32m    224\u001b[0m     \u001b[39mif\u001b[39;00m swmr \u001b[39mand\u001b[39;00m swmr_support:\n\u001b[1;32m    225\u001b[0m         flags \u001b[39m|\u001b[39m\u001b[39m=\u001b[39m h5f\u001b[39m.\u001b[39mACC_SWMR_READ\n\u001b[0;32m--> 226\u001b[0m     fid \u001b[39m=\u001b[39m h5f\u001b[39m.\u001b[39mopen(name, flags, fapl\u001b[39m=\u001b[39mfapl)\n\u001b[1;32m    227\u001b[0m \u001b[39melif\u001b[39;00m mode \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mr+\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m    228\u001b[0m     fid \u001b[39m=\u001b[39m h5f\u001b[39m.\u001b[39mopen(name, h5f\u001b[39m.\u001b[39mACC_RDWR, fapl\u001b[39m=\u001b[39mfapl)\n",
+      "File \u001b[0;32mh5py/_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mh5py/_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mh5py/h5f.pyx:106\u001b[0m, in \u001b[0;36mh5py.h5f.open\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mOSError\u001b[0m: [Errno 5] Unable to open file (unable to open file: name = '/run/user/1006/gvfs/smb-share:server=10.162.37.21,share=main/Public/EFRI/1_formatted/SUBJECT07/EFRI07_WAR_SES1_Raw.mat', errno = 5, error message = 'Input/output error', flags = 0, o_flags = 0)"
+     ]
+    }
+   ],
    "source": [
-    "setup_path = '/run/user/1006/gvfs/smb-share:server=10.162.37.21,share=main/Public/EFRI/1_formatted/SUBJECT06/EFRI06_WAR_SES1_Setup.mat'\n",
-    "raw_path = '/run/user/1006/gvfs/smb-share:server=10.162.37.21,share=main/Public/EFRI/1_formatted/SUBJECT06/EFRI06_WAR_SES1_Raw.mat'\n",
-    "data_path = '/run/user/1006/gvfs/smb-share:server=10.162.37.21,share=main/Daniel/Data/Trial_by_Chan_by_Freq_by_Time_Snapshots/Subject06_snapshot_normalized.npy'\n",
+    "setup_path = '/run/user/1006/gvfs/smb-share:server=10.162.37.21,share=main/Public/EFRI/1_formatted/SUBJECT10/EFRI07_WAR_SES1_Setup.mat'\n",
+    "raw_path = '/run/user/1006/gvfs/smb-share:server=10.162.37.21,share=main/Public/EFRI/1_formatted/SUBJECT010/EFRI07_WAR_SES1_Raw.mat'\n",
+    "data_path = 'Data/Subject10_snapshot_normalized.npy'\n",
+    "# data_path = '/run/user/1006/gvfs/smb-share:server=10.162.37.21,share=main/Daniel/Data/Trial_by_Chan_by_Freq_by_Time_Snapshots/Subject06_snapshot_normalized.npy'\n",
     "\n",
     "raw_file = h5py.File(raw_path)\n",
     "setup_data = mat73.loadmat(setup_path)"
@@ -340,6 +358,7 @@
     "    ax.set_ylabel('Mean Accuracy')\n",
     "    ax.set_xlabel('Time')\n",
     "    ax.axvspan(mean_accuracies_max[channel,1],mean_accuracies_max[channel,1]+.1,color = 'red', alpha=0.5)\n",
+    "    ax.annotate(f'(Time: {mean_accuracies_max[channel,1]}, Accuracy: {mean_accuracies_max[channel,0]})', (mean_accuracies_max[channel,1]-1,10))\n",
     "\n",
     "plt.savefig('top_ten_accuracies.png')\n",
     "plt.show()"
