--- a/EFRI Feature Engineering.ipynb
+++ b/EFRI Feature Engineering.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "id": "1b7f3416",
    "metadata": {},
    "outputs": [
@@ -86,12 +86,13 @@
        "(185, 133, 63, 100)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "num_trials = data.shape[0]\n",
     "num_channels = data.shape[1]\n",
     "num_timesteps = data.shape[3]\n",
     "data.shape"
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "id": "df8fdf1a",
    "metadata": {},
    "outputs": [],
@@ -167,14 +168,321 @@
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "\n",
     "model_accuracies = np.zeros((num_channels, num_timesteps, 5))  # Number of cross-validation folds (e.g., 5)\n",
+    "decision_values = np.zeros((num_channels,num_timesteps,num_trials))\n",
+    "prob_values = np.zeros((num_channels, num_timesteps, num_trials, 2))\n",
     "\n",
     "for channel in range(num_channels):\n",
     "    for time in range(num_timesteps):\n",
     "        X = data[:, channel, :, time]\n",
     "        # X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "        lda = LinearDiscriminantAnalysis(solver='lsqr', shrinkage='auto')\n",
-    "        cv_results = cross_validate(lda, X, y, cv=5)\n",
-    "        model_accuracies[channel, time] = cv_results['test_score']"
+    "        cv_results = cross_validate(lda, X, y, cv=5, return_estimator=True)\n",
+    "        model_accuracies[channel, time] = cv_results['test_score']\n",
+    "        max_index = list(model_accuracies[channel,time]).index(model_accuracies[channel,time].max()) #find the decision values for each trial\n",
+    "        best_lda = cv_results['estimator'][max_index]\n",
+    "        decision_values[channel,time] = best_lda.decision_function(X)\n",
+    "        prob_values[channel,time] = best_lda.predict_proba(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "18be4d73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(185,)\n",
+      "(185, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = data[:,1,:,1]\n",
+    "lda = LinearDiscriminantAnalysis(solver = 'lsqr', shrinkage='auto')\n",
+    "cv = cross_validate(lda, X,y, cv=5, return_estimator=True) \n",
+    "test_scores = cv['test_score']\n",
+    "max_index = list(test_scores).index(test_scores.max())\n",
+    "best_lda = cv['estimator'][max_index]\n",
+    "# print(y)\n",
+    "print(best_lda.decision_function(X).shape)\n",
+    "print(best_lda.predict_proba(X).shape)ttest_ind(prob_values[channel,time,:,0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "1c29433d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.51798151, 0.48201849],\n",
+       "       [0.91647974, 0.08352026],\n",
+       "       [0.86952408, 0.13047592],\n",
+       "       [0.8344974 , 0.1655026 ],\n",
+       "       [0.2961735 , 0.7038265 ],\n",
+       "       [0.55789405, 0.44210595],\n",
+       "       [0.84606339, 0.15393661],\n",
+       "       [0.82029736, 0.17970264],\n",
+       "       [0.85588602, 0.14411398],\n",
+       "       [0.37146449, 0.62853551],\n",
+       "       [0.22899169, 0.77100831],\n",
+       "       [0.54174556, 0.45825444],\n",
+       "       [0.77612808, 0.22387192],\n",
+       "       [0.23735931, 0.76264069],\n",
+       "       [0.19100197, 0.80899803],\n",
+       "       [0.7310564 , 0.2689436 ],\n",
+       "       [0.73044477, 0.26955523],\n",
+       "       [0.87679813, 0.12320187],\n",
+       "       [0.27698481, 0.72301519],\n",
+       "       [0.54613735, 0.45386265],\n",
+       "       [0.62138948, 0.37861052],\n",
+       "       [0.55630702, 0.44369298],\n",
+       "       [0.3918769 , 0.6081231 ],\n",
+       "       [0.70148935, 0.29851065],\n",
+       "       [0.84882793, 0.15117207],\n",
+       "       [0.39962631, 0.60037369],\n",
+       "       [0.31977066, 0.68022934],\n",
+       "       [0.63565706, 0.36434294],\n",
+       "       [0.51898468, 0.48101532],\n",
+       "       [0.72377431, 0.27622569],\n",
+       "       [0.85859969, 0.14140031],\n",
+       "       [0.56538787, 0.43461213],\n",
+       "       [0.50083178, 0.49916822],\n",
+       "       [0.9161853 , 0.0838147 ],\n",
+       "       [0.27109163, 0.72890837],\n",
+       "       [0.33153334, 0.66846666],\n",
+       "       [0.39998334, 0.60001666],\n",
+       "       [0.42514178, 0.57485822],\n",
+       "       [0.5784974 , 0.4215026 ],\n",
+       "       [0.49695652, 0.50304348],\n",
+       "       [0.98133072, 0.01866928],\n",
+       "       [0.40490503, 0.59509497],\n",
+       "       [0.53725463, 0.46274537],\n",
+       "       [0.91045319, 0.08954681],\n",
+       "       [0.5425069 , 0.4574931 ],\n",
+       "       [0.85974132, 0.14025868],\n",
+       "       [0.49144031, 0.50855969],\n",
+       "       [0.49382861, 0.50617139],\n",
+       "       [0.47652984, 0.52347016],\n",
+       "       [0.50418983, 0.49581017],\n",
+       "       [0.63586958, 0.36413042],\n",
+       "       [0.59536644, 0.40463356],\n",
+       "       [0.34090031, 0.65909969],\n",
+       "       [0.28082887, 0.71917113],\n",
+       "       [0.17612287, 0.82387713],\n",
+       "       [0.68680981, 0.31319019],\n",
+       "       [0.89115895, 0.10884105],\n",
+       "       [0.52055655, 0.47944345],\n",
+       "       [0.58639002, 0.41360998],\n",
+       "       [0.41747899, 0.58252101],\n",
+       "       [0.3905101 , 0.6094899 ],\n",
+       "       [0.58279278, 0.41720722],\n",
+       "       [0.58656288, 0.41343712],\n",
+       "       [0.855391  , 0.144609  ],\n",
+       "       [0.66468606, 0.33531394],\n",
+       "       [0.84912661, 0.15087339],\n",
+       "       [0.66974127, 0.33025873],\n",
+       "       [0.89642708, 0.10357292],\n",
+       "       [0.71489213, 0.28510787],\n",
+       "       [0.76532346, 0.23467654],\n",
+       "       [0.30771225, 0.69228775],\n",
+       "       [0.75772252, 0.24227748],\n",
+       "       [0.79405022, 0.20594978],\n",
+       "       [0.78989907, 0.21010093],\n",
+       "       [0.36224872, 0.63775128],\n",
+       "       [0.41378621, 0.58621379],\n",
+       "       [0.56178024, 0.43821976],\n",
+       "       [0.52224587, 0.47775413],\n",
+       "       [0.54725386, 0.45274614],\n",
+       "       [0.7146256 , 0.2853744 ],\n",
+       "       [0.41470207, 0.58529793],\n",
+       "       [0.58789584, 0.41210416],\n",
+       "       [0.38209606, 0.61790394],\n",
+       "       [0.46674466, 0.53325534],\n",
+       "       [0.60953317, 0.39046683],\n",
+       "       [0.77353897, 0.22646103],\n",
+       "       [0.21499554, 0.78500446],\n",
+       "       [0.53606053, 0.46393947],\n",
+       "       [0.48086357, 0.51913643],\n",
+       "       [0.88171066, 0.11828934],\n",
+       "       [0.59077692, 0.40922308],\n",
+       "       [0.92636345, 0.07363655],\n",
+       "       [0.68606221, 0.31393779],\n",
+       "       [0.88120028, 0.11879972],\n",
+       "       [0.755138  , 0.244862  ],\n",
+       "       [0.20430423, 0.79569577],\n",
+       "       [0.47533201, 0.52466799],\n",
+       "       [0.92675844, 0.07324156],\n",
+       "       [0.46103747, 0.53896253],\n",
+       "       [0.62965206, 0.37034794],\n",
+       "       [0.4013835 , 0.5986165 ],\n",
+       "       [0.3195033 , 0.6804967 ],\n",
+       "       [0.60645797, 0.39354203],\n",
+       "       [0.27961385, 0.72038615],\n",
+       "       [0.57689462, 0.42310538],\n",
+       "       [0.86938395, 0.13061605],\n",
+       "       [0.6649093 , 0.3350907 ],\n",
+       "       [0.65167917, 0.34832083],\n",
+       "       [0.78428969, 0.21571031],\n",
+       "       [0.68500947, 0.31499053],\n",
+       "       [0.51600142, 0.48399858],\n",
+       "       [0.43650794, 0.56349206],\n",
+       "       [0.5775546 , 0.4224454 ],\n",
+       "       [0.65546789, 0.34453211],\n",
+       "       [0.60489657, 0.39510343],\n",
+       "       [0.58673555, 0.41326445],\n",
+       "       [0.17897422, 0.82102578],\n",
+       "       [0.53155134, 0.46844866],\n",
+       "       [0.72432077, 0.27567923],\n",
+       "       [0.72922116, 0.27077884],\n",
+       "       [0.84761229, 0.15238771],\n",
+       "       [0.76126658, 0.23873342],\n",
+       "       [0.67339491, 0.32660509],\n",
+       "       [0.30756224, 0.69243776],\n",
+       "       [0.50113775, 0.49886225],\n",
+       "       [0.5391248 , 0.4608752 ],\n",
+       "       [0.94316198, 0.05683802],\n",
+       "       [0.50479682, 0.49520318],\n",
+       "       [0.30037477, 0.69962523],\n",
+       "       [0.23579705, 0.76420295],\n",
+       "       [0.47837699, 0.52162301],\n",
+       "       [0.56949577, 0.43050423],\n",
+       "       [0.23670738, 0.76329262],\n",
+       "       [0.60899344, 0.39100656],\n",
+       "       [0.28088877, 0.71911123],\n",
+       "       [0.79874041, 0.20125959],\n",
+       "       [0.49337664, 0.50662336],\n",
+       "       [0.59596165, 0.40403835],\n",
+       "       [0.54881844, 0.45118156],\n",
+       "       [0.2860778 , 0.7139222 ],\n",
+       "       [0.84053005, 0.15946995],\n",
+       "       [0.46012273, 0.53987727],\n",
+       "       [0.36043379, 0.63956621],\n",
+       "       [0.27284773, 0.72715227],\n",
+       "       [0.84202879, 0.15797121],\n",
+       "       [0.4463417 , 0.5536583 ],\n",
+       "       [0.69397119, 0.30602881],\n",
+       "       [0.3576111 , 0.6423889 ],\n",
+       "       [0.30226092, 0.69773908],\n",
+       "       [0.76953822, 0.23046178],\n",
+       "       [0.92400592, 0.07599408],\n",
+       "       [0.66105253, 0.33894747],\n",
+       "       [0.2104824 , 0.7895176 ],\n",
+       "       [0.51382696, 0.48617304],\n",
+       "       [0.69968168, 0.30031832],\n",
+       "       [0.69148197, 0.30851803],\n",
+       "       [0.77133336, 0.22866664],\n",
+       "       [0.70839132, 0.29160868],\n",
+       "       [0.94160075, 0.05839925],\n",
+       "       [0.53179529, 0.46820471],\n",
+       "       [0.90379124, 0.09620876],\n",
+       "       [0.60934714, 0.39065286],\n",
+       "       [0.82270284, 0.17729716],\n",
+       "       [0.62511676, 0.37488324],\n",
+       "       [0.89401262, 0.10598738],\n",
+       "       [0.78648403, 0.21351597],\n",
+       "       [0.72480784, 0.27519216],\n",
+       "       [0.58782518, 0.41217482],\n",
+       "       [0.85250226, 0.14749774],\n",
+       "       [0.60708968, 0.39291032],\n",
+       "       [0.83412146, 0.16587854],\n",
+       "       [0.82403485, 0.17596515],\n",
+       "       [0.82085925, 0.17914075],\n",
+       "       [0.70849156, 0.29150844],\n",
+       "       [0.4815389 , 0.5184611 ],\n",
+       "       [0.78020776, 0.21979224],\n",
+       "       [0.21884397, 0.78115603],\n",
+       "       [0.81193169, 0.18806831],\n",
+       "       [0.80423062, 0.19576938],\n",
+       "       [0.60691986, 0.39308014],\n",
+       "       [0.7816877 , 0.2183123 ],\n",
+       "       [0.73255332, 0.26744668],\n",
+       "       [0.39179849, 0.60820151],\n",
+       "       [0.55692602, 0.44307398],\n",
+       "       [0.43841773, 0.56158227]])"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob_values[0,0,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "6098f31c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import ttest_ind, ttest_1samp\n",
+    "\n",
+    "# a = prob_values[0,0,:,0]\n",
+    "# b = prob_values[0,0,:,1]\n",
+    "# c = decision_values[0,0,:]\n",
+    "# print(a)\n",
+    "# print(b)\n",
+    "# print(ttest_ind(a,b))\n",
+    "# print(ttest_1samp(c,0))\n",
+    "\n",
+    "# print(ttest_1samp(prob_values[0,0,0,0],0.5).statistic)\n",
+    "\n",
+    "# Calculating t-statistic for probabilities\n",
+    "\n",
+    "t_stats = np.zeros((num_channels,num_timesteps))\n",
+    "\n",
+    "for channel in range(num_channels):\n",
+    "    for time in range(num_timesteps):\n",
+    "        # t_stats[channel,time] = ttest_ind(prob_values[channel,time,:,0],prob_values[channel,time,:,1]).statistic\n",
+    "        t_stats[channel,time] = ttest_1samp(prob_values[channel,time,:,0], 0.5).statistic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "6d7f969b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8.72692469,  8.62093694,  8.77608944,  6.29874567,  7.90113071,\n",
+       "        7.73487184,  6.16254931,  7.16234715,  6.86002729,  6.14477855,\n",
+       "        7.54102946,  7.24419799,  7.32692134,  6.2280075 ,  7.34759123,\n",
+       "        6.59703661,  7.11943801,  7.90993109,  8.38928325,  6.64477881,\n",
+       "        5.96931728,  7.64929773,  7.82640741,  8.11524102,  6.40138645,\n",
+       "        4.64129016,  6.01076379,  6.81180542,  4.87774509,  5.97770044,\n",
+       "        7.03638832,  8.64962224,  8.76072999,  7.61790478,  6.89317601,\n",
+       "        5.93571303,  9.3444048 ,  7.11563844,  7.59213711,  5.88158414,\n",
+       "        7.06059156,  6.68562567,  6.1128176 ,  7.28634594,  8.05982705,\n",
+       "        6.30396132,  5.38672345,  8.28053836,  6.13553075,  5.42673089,\n",
+       "        7.49536942,  7.3618644 ,  9.7313944 ,  6.94415013,  7.08302714,\n",
+       "        8.87320649,  6.80022851,  7.65893928,  8.15122981,  9.16475033,\n",
+       "        8.84323053,  8.479917  , 10.06333004,  8.93611584,  9.48834205,\n",
+       "        9.2531964 ,  8.51675787,  7.8670306 ,  8.29067867,  8.3612379 ,\n",
+       "        5.43909178,  7.45860655,  8.05406816,  7.50056289,  9.03894571,\n",
+       "        8.1555125 ,  8.61676204,  7.4393342 ,  7.43770766,  7.82219336,\n",
+       "        7.52592294,  6.89382922,  8.0156904 ,  7.7339484 ,  7.31951397,\n",
+       "        7.64670529,  5.33127221,  5.12982534,  5.67586528,  6.32091037,\n",
+       "        6.54572114,  5.61301466,  8.08467526,  9.31631997,  7.16084068,\n",
+       "        6.29996715,  7.87676456,  9.59004746,  6.90894506,  8.32240592])"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_stats[2]"
    ]
   },
   {
