calculated ratio of high bets to card value

--- a/EFRI Data Analysis LDA.ipynb
+++ b/EFRI Data Analysis LDA.ipynb
@@ -49,15 +49,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "2010fc45",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ncsl_share = '/run/user/1000/gvfs/smb-share:server=10.162.37.21,share=main'\n",
-    "# ncsl_share = '/mnt/ncsl_share'\n",
-    "# data_path = ncsl_share + f'/Daniel/Data/Trial_by_Chan_by_Freq_by_Time_Snapshots/Subject06_snapshot_normalized.npy'\n",
-    "data_path = f'Data/Subject06_snapshot_normalized.npy'\n",
+    "# ncsl_share = '/run/user/1000/gvfs/smb-share:server=10.162.37.21,share=main'\n",
+    "ncsl_share = '/mnt/ncsl_share'\n",
+    "data_path = ncsl_share + f'/Daniel/Data/Trial_by_Chan_by_Freq_by_Time_Snapshots/Subject06_snapshot_normalized.npy'\n",
+    "# data_path = f'Data/Subject06_snapshot_normalized.npy'\n",
     "setup_path = ncsl_share + f'/Public/EFRI/1_formatted/SUBJECT06/EFRI06_WAR_SES1_Setup.mat'\n",
     "raw_path = ncsl_share + f'/Public/EFRI/1_formatted/SUBJECT06/EFRI06_WAR_SES1_Raw.mat'\n",
     "out_path_tvalues = f't_values'\n",
@@ -98,6 +98,77 @@
     "num_channels = data.shape[1]\n",
     "num_timesteps = data.shape[3]\n",
     "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "530612d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bets = setup_data['filters']['bets']\n",
+    "\n",
+    "good_trials = np.where(np.isnan(bets) == False)[0] # extract indices of trials without the 'nan'\n",
+    "\n",
+    "bets = bets[good_trials] # get the bet values for the good trials\n",
+    "subject_cards = setup_data['filters']['card1'][good_trials] # get the subject's card values for the good trials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "bf274503",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the indices for where each of the card values in subject_cards\n",
+    "card_value_indices = []\n",
+    "for i in [2,4,6,8,10]:\n",
+    "    card_value_indices.append(np.where(subject_cards == i)[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ed8d5dfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.asarray([(0 if bet == 5 else 1) for bet in bets]) # 0 = low bet ($5), 1 = high bet ($20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "960d9267",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bet_card_ratio = []\n",
+    "for i in range(len(card_value_indices)):\n",
+    "    bet_card_ratio.append(y[card_value_indices[i]].sum()/len(card_value_indices[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "8dafc1cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0, 0.027777777777777776, 0.16666666666666666, 1.0, 1.0]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bet_card_ratio"
    ]
   },
   {
@@ -146,18 +217,6 @@
     "## Model Training\n",
     "\n",
     "Using the power per wavelet scale for a particular channel and timepoint as a feature. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "ed8d5dfb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# extract the bets made by the subject\n",
-    "bets = setup_data['filters']['bets']\n",
-    "y = np.asarray([(0 if bet == 5 else 1) for bet in bets if not np.isnan(bet)]) # 0 = low bet ($5), 1 = high bet ($20), removes any values with 'nan' value"
    ]
   },
   {
