--- a/EFRI Data Analysis LDA.ipynb
+++ b/EFRI Data Analysis LDA.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 128,
    "id": "2010fc45",
    "metadata": {},
    "outputs": [],
@@ -68,41 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 129,
    "id": "22fdad73",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.load(data_path)"
+    "data = np.load(data_path)\n",
+    "num_trials, num_channels, num_freqs, num_timesteps = data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1b7f3416",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(185, 133, 63, 100)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "num_trials = data.shape[0]\n",
-    "num_channels = data.shape[1]\n",
-    "num_timesteps = data.shape[3]\n",
-    "data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 130,
    "id": "530612d4",
    "metadata": {},
    "outputs": [],
@@ -117,12 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 131,
    "id": "bf274503",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get the indices for where each of the card values in subject_cards\n",
+    "# Get the indices for each of the card values in subject_cards\n",
     "card_value_indices = []\n",
     "for i in [2,4,6,8,10]:\n",
     "    card_value_indices.append(np.where(subject_cards == i)[0])"
@@ -130,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 132,
    "id": "ed8d5dfb",
    "metadata": {},
    "outputs": [],
@@ -140,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 133,
    "id": "960d9267",
    "metadata": {},
    "outputs": [],
@@ -152,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 134,
    "id": "8dafc1cb",
    "metadata": {},
    "outputs": [
@@ -162,7 +139,7 @@
        "[0.0, 0.027777777777777776, 0.16666666666666666, 1.0, 1.0]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,6 +303,138 @@
    "metadata": {},
    "source": [
     "## Reshuffling of Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "829bce05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(185,)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape\n",
+    "y_new = np.zeros(y.shape)\n",
+    "y_new.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "bbb5873d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(-0.5*0.2*27)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "4d258023",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_shuffled = np.zeros(y.shape)\n",
+    "for indices in card_value_indices:\n",
+    "    temp = indices\n",
+    "    num_high_bets = y[indices].sum() + round(np.random.uniform(-1,1)*y[indices].sum()*.2)\n",
+    "    for j in range(num_high_bets):\n",
+    "        if np.any(temp):\n",
+    "            rand = np.random.choice(temp)\n",
+    "            y_shuffled[rand] = 1\n",
+    "            rand_index = np.where(temp == rand)[0]\n",
+    "            temp = np.delete(temp,rand_index)\n",
+    "    y_shuffled[temp] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "id": "54c509b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.027777777777777776\n",
+      "0.19047619047619047\n",
+      "1.0\n",
+      "0.9629629629629629\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(card_value_indices)):\n",
+    "    print(y_shuffled[card_value_indices[i]].sum()/len(card_value_indices[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "f08ba638",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y[card_value_indices[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "3b06aa5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0.])"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_shuffled[card_value_indices[1]]"
    ]
   },
   {
