--- a/EFRI Data Analysis LDA.ipynb
+++ b/EFRI Data Analysis LDA.ipynb
@@ -198,16 +198,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 231,
    "id": "df8fdf1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split, cross_validate\n",
+    "from sklearn.model_selection import cross_validate\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "\n",
     "model_accuracies = np.zeros((num_channels, num_timesteps, 5))  # Number of cross-validation folds (e.g., 5)\n",
-    "decision_values = np.zeros((num_channels,num_timesteps,num_trials))\n",
+    "# decision_values = np.zeros((num_channels,num_timesteps,num_trials))\n",
     "prob_values = np.zeros((num_channels, num_timesteps, num_trials, 2))\n",
     "\n",
     "\n",
@@ -220,16 +220,28 @@
     "        model_accuracies[channel, time] = cv_results['test_score'] # store the accuracies of the cross-validated model\n",
     "        max_index = list(model_accuracies[channel,time]).index(model_accuracies[channel,time].max()) \n",
     "        best_lda = cv_results['estimator'][max_index] # select the best performing model after cross-validation\n",
-    "        decision_values[channel,time] = best_lda.decision_function(X) # calculate the decision values for each trial\n",
+    "        # decision_values[channel,time] = best_lda.decision_function(X) # calculate the decision values for each trial\n",
     "        prob_values[channel,time] = best_lda.predict_log_proba(X) # calculate the log of probabilities for classification of each class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 229,
    "id": "fd32af7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'prob_values' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[229], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmath\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m sanity_check \u001b[39m=\u001b[39m prob_values[:,:,:,\u001b[39m1\u001b[39m] \u001b[39m-\u001b[39m prob_values[:,:,:,\u001b[39m0\u001b[39m]\n\u001b[1;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(num_trials):\n\u001b[1;32m      4\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m math\u001b[39m.\u001b[39misclose(sanity_check[\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,i], decision_values[\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,i],rel_tol\u001b[39m=\u001b[39m\u001b[39m1e-9\u001b[39m):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'prob_values' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "sanity_check = prob_values[:,:,:,1] - prob_values[:,:,:,0]\n",
@@ -257,8 +269,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "67d48b93",
+   "metadata": {},
+   "source": [
+    "## Calculating t-statistic"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 232,
    "id": "6098f31c",
    "metadata": {},
    "outputs": [],
@@ -266,34 +287,51 @@
     "from scipy.stats import ttest_ind\n",
     "\n",
     "# Calculating t-statistic for decision values of LDA model\n",
-    "t_stats = np.zeros((num_channels,num_timesteps))\n",
+    "t_values = np.zeros((num_channels,num_timesteps))\n",
     "\n",
     "for channel in range(num_channels):\n",
     "    for time in range(num_timesteps):\n",
-    "        t_stats[channel,time] = ttest_ind(prob_values[channel,time,:,0],prob_values[channel,time,:,1]).statistic\n",
+    "        t_values[channel,time] = ttest_ind(prob_values[channel,time,:,0],prob_values[channel,time,:,1]).statistic\n",
     "\n",
-    "np.save(f'{out_path_tvalues}/Subject06_tvalues.npy',t_stats) # save t-values"
+    "np.save(f'{out_path_tvalues}/Subject06_tvalues.npy',t_values) # save t-values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "cc08aa08",
+   "execution_count": 235,
+   "id": "9696c71e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(133, 100)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 8.57937759 10.43763461  9.17333282  8.06687317  7.37345286  6.2411908\n",
+      "  8.12890486  9.62885734 10.69809968  8.95676548  9.2242803   9.16990984\n",
+      " 11.40167667  9.76628958  9.77186154 10.31623    10.67363153 11.7403048\n",
+      "  9.35615283 12.81145359  9.21854035  9.44379393 11.39927899  8.04554984\n",
+      "  8.15889265 13.35443071 11.09279875 11.15179606 10.30769338  9.94438055\n",
+      "  8.75044186 13.45984965  9.88479722  7.45360963  9.22623399  8.56798586\n",
+      " 10.74487708 10.59422691  7.16609796  7.82511417  7.05260735  7.09129239\n",
+      "  9.67591659 11.67642514 10.73617724  8.40144847 10.09240515  9.44454736\n",
+      "  7.41524223  7.61674258 10.76922912  9.15868452 10.56763483 11.70544188\n",
+      " 11.66630868 11.35186419  9.29147083 10.74238155  9.35619763  7.62428263\n",
+      "  9.81687804  7.16645058  9.08475458 11.36003476 12.21198651 11.61042569\n",
+      " 11.88794212 10.62885369  9.56512229  9.78606426  9.40106294  8.30114851\n",
+      " 13.08255714 12.12947976 10.90694036  7.6971869   8.29388232  9.89153806\n",
+      "  9.73502812 10.32793402  9.99908187 10.63112539  7.93944503  7.70120974\n",
+      "  9.52229872 11.68631757 10.73587987 12.47054691  9.0044357   9.25664334\n",
+      " 10.71867968 11.54558249  8.22884047 10.07064089  9.87148913 12.32910981\n",
+      "  9.23097767 11.33376708 11.82167719  9.77367163]\n"
+     ]
     }
    ],
    "source": [
-    "t_stats.shape"
+    "subject06_tvalues = np.load('t_values/Subject06_tvalues.npy')\n",
+    "subject07_tvalues = np.load('t_values/Subject07_tvalues.npy')\n",
+    "\n",
+    "print(subject06_tvalues[0])\n",
+    "# print(ttest_ind(subject06_tvalues,subject07_tvalues).statistic)"
    ]
   },
   {
@@ -303,50 +341,6 @@
    "metadata": {},
    "source": [
     "## Reshuffling of Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "id": "829bce05",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(185,)"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.shape\n",
-    "y_new = np.zeros(y.shape)\n",
-    "y_new.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "id": "bbb5873d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-3"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "round(-0.5*0.2*27)"
    ]
   },
   {
@@ -390,174 +384,6 @@
    "source": [
     "for i in range(len(card_value_indices)):\n",
     "    print(y_shuffled[card_value_indices[i]].sum()/len(card_value_indices[i]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
-   "id": "f08ba638",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y[card_value_indices[0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
-   "id": "3b06aa5e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0.])"
-      ]
-     },
-     "execution_count": 182,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_shuffled[card_value_indices[1]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "ad0c4c68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "low_bets_count = np.count_nonzero(y == 0)\n",
-    "high_bets_count = np.count_nonzero(y == 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "d07b8b2e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import copy\n",
-    "y_rand = copy.deepcopy(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "40c363cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 0 0 0 1 1 0 0 0 1 1 1 1 1 1 0 0 1 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 1 1 1\n",
-      " 0 1 0 1 0 1 0 0 0 1 1 1 0 1 0 1 0 1 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0 1 1 0 1\n",
-      " 1 1 0 0 0 0 1 1 1 1 1 0 1 1 0 0 0 0 0 0 0 1 1 0 1 0 1 1 1 1 0 0 0 1 0 0 0\n",
-      " 1 1 1 0 0 1 1 0 0 0 1 0 1 1 1 0 0 1 0 1 0 1 0 1 0 0 0 1 0 0 1 1 1 0 1 0 0\n",
-      " 0 1 0 0 1 0 1 0 1 0 0 0 0 1 1 0 0 0 0 1 1 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "2946eb1c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 0 1 1 0 0 1 0 1 0 1 1 0 0 0 0 0 0 1 0 0 1 1 1 0 0 1 1 0 1 0 0 0 1 1 0 0\n",
-      " 0 0 1 1 0 0 0 1 1 0 1 1 0 0 1 1 1 0 1 0 1 0 0 0 1 0 1 0 0 0 0 1 1 0 0 1 1\n",
-      " 1 1 1 0 0 1 1 0 0 0 0 1 0 1 0 0 0 0 0 1 1 1 0 0 0 1 1 1 0 1 1 0 0 0 0 0 0\n",
-      " 1 1 0 0 1 0 0 0 0 0 0 0 0 0 0 1 0 0 1 1 1 0 1 1 1 0 0 0 1 0 0 1 0 0 1 1 0\n",
-      " 1 1 0 1 0 1 0 0 1 0 0 0 1 0 1 1 0 0 1 0 0 1 0 0 0 1 1 0 1 0 0 0 0 0 1 0 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "np.random.shuffle(y_rand)\n",
-    "print(y_rand)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "02701e33",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using a threshold of 1.984217\n",
-      "stat_fun(H1): min=62.546212 max=62.546212\n",
-      "Running initial clustering …\n",
-      "Found 1 cluster\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ce60838e78a445cae432d9149709481",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | Permuting : 0/1023 [00:00<?,       ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "cluster_t = mne.stats.spatio_temporal_cluster_1samp_test(t_stats[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "e765dc6b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([62.54621197])"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cluster_t[0]"
    ]
   },
   {
@@ -754,7 +580,7 @@
     "# Sanity check that t_values make sense\n",
     "\n",
     "print(mean_accuracies[0,15])\n",
-    "print(t_stats[0,:])"
+    "print(t_values[0,:])"
    ]
   },
   {
