--- a/EFRI Data Analysis LDA.ipynb
+++ b/EFRI Data Analysis LDA.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 1,
    "id": "0043744a",
    "metadata": {},
    "outputs": [],
@@ -160,16 +160,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
+   "id": "00c76c6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = np.zeros(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cb20dee3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp[1:11]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "bad1051f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_LDA_model(data, y, channel, time):\n",
-    "    X = data[:, channel, :, time] # get the EEG data for a particular channel and time point\n",
-    "    high_bet_indices = np.where(y == 1)\n",
-    "    low_bet_indices = np.where(y == 0)\n",
-    "    power_diff = X[high_bet_indices, :][0].mean(0) - X[low_bet_indices, :][0].mean(0)\n",
+    "def train_LDA_model(data, y, channel, time_resolution):\n",
+    "\n",
+    "    # Checks that inputted value for time resolution is valid\n",
+    "    if not(num_timesteps % time_resolution == 0):\n",
+    "            raise Exception(\"Invalid time resolution size, num_timesteps % resolution > 0\")\n",
+    "    \n",
+    "    # Resolution is the amount of time steps to be averaged\n",
+    "    X = np.zeros((num_channels, num_freqs, int(100/time_resolution)))\n",
+    "    current_timestep = 0\n",
+    "\n",
+    "    for i in range(X.shape[2]):\n",
+    "        X = data[:, channel, :, current_timestep:current_timestep+time_resolution].mean(2) # get the EEG data for a particular channel and time point\n",
+    "        current_timestep += time_resolution\n",
+    "\n",
+    "    low_bet_avg_power = X[np.where(y == 0), :][0].mean(0)\n",
+    "    high_bet_avg_power = X[np.where(y == 1), :][0].mean(0)\n",
     "\n",
     "    '''\n",
     "    # Using RepeatedKFold() for training LDA\n",
@@ -199,7 +241,7 @@
     "    dval = np.dot(X, best_lda.coef_.T).T[0] + best_lda.intercept_ # calculate decision value \n",
     "\n",
     "    t_stat = ttest_1samp(dval, popmean=0).statistic # perform 1-sided t-test on decision values corresponding to high bet\n",
-    "    return best_score, dval, t_stat, power_diff"
+    "    return best_score, dval, t_stat, [low_bet_avg_power, high_bet_avg_power]"
    ]
   },
   {
@@ -304,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "id": "e258963f",
    "metadata": {},
    "outputs": [],
@@ -399,7 +441,24 @@
    "execution_count": 289,
    "id": "5388406b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[289], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m      6\u001b[0m     \u001b[39mwith\u001b[39;00m Pool(n_processes) \u001b[39mas\u001b[39;00m p:\n\u001b[0;32m----> 7\u001b[0m         results \u001b[39m=\u001b[39m p\u001b[39m.\u001b[39mstarmap(get_shuffled_t_stats, [(data, y, num_channels, num_timesteps, num_trials)] \u001b[39m*\u001b[39m \u001b[39m2\u001b[39m)\n\u001b[1;32m      8\u001b[0m         pool\u001b[39m.\u001b[39mclose()\n",
+      "File \u001b[0;32m~/miniconda3/envs/ncsl/lib/python3.11/multiprocessing/pool.py:375\u001b[0m, in \u001b[0;36mPool.starmap\u001b[0;34m(self, func, iterable, chunksize)\u001b[0m\n\u001b[1;32m    369\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstarmap\u001b[39m(\u001b[39mself\u001b[39m, func, iterable, chunksize\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m    370\u001b[0m \u001b[39m    \u001b[39m\u001b[39m'''\u001b[39;00m\n\u001b[1;32m    371\u001b[0m \u001b[39m    Like `map()` method but the elements of the `iterable` are expected to\u001b[39;00m\n\u001b[1;32m    372\u001b[0m \u001b[39m    be iterables as well and will be unpacked as arguments. Hence\u001b[39;00m\n\u001b[1;32m    373\u001b[0m \u001b[39m    `func` and (a, b) becomes func(a, b).\u001b[39;00m\n\u001b[1;32m    374\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m--> 375\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_map_async(func, iterable, starmapstar, chunksize)\u001b[39m.\u001b[39mget()\n",
+      "File \u001b[0;32m~/miniconda3/envs/ncsl/lib/python3.11/multiprocessing/pool.py:768\u001b[0m, in \u001b[0;36mApplyResult.get\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    767\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget\u001b[39m(\u001b[39mself\u001b[39m, timeout\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m--> 768\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwait(timeout)\n\u001b[1;32m    769\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mready():\n\u001b[1;32m    770\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mTimeoutError\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/envs/ncsl/lib/python3.11/multiprocessing/pool.py:765\u001b[0m, in \u001b[0;36mApplyResult.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    764\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwait\u001b[39m(\u001b[39mself\u001b[39m, timeout\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m--> 765\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_event\u001b[39m.\u001b[39mwait(timeout)\n",
+      "File \u001b[0;32m~/miniconda3/envs/ncsl/lib/python3.11/threading.py:622\u001b[0m, in \u001b[0;36mEvent.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    620\u001b[0m signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_flag\n\u001b[1;32m    621\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m signaled:\n\u001b[0;32m--> 622\u001b[0m     signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_cond\u001b[39m.\u001b[39mwait(timeout)\n\u001b[1;32m    623\u001b[0m \u001b[39mreturn\u001b[39;00m signaled\n",
+      "File \u001b[0;32m~/miniconda3/envs/ncsl/lib/python3.11/threading.py:320\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    318\u001b[0m \u001b[39mtry\u001b[39;00m:    \u001b[39m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[1;32m    319\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 320\u001b[0m         waiter\u001b[39m.\u001b[39macquire()\n\u001b[1;32m    321\u001b[0m         gotit \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    322\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "from multiprocessing import Pool\n",
     "\n",
