--- a/EFRI Data Analysis LDA.ipynb
+++ b/EFRI Data Analysis LDA.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "id": "8f36eceb",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "dict_keys(['elec_area', 'elec_ind', 'elec_name', 'filters', 'trial_times', 'trial_words'])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "data = np.load(data_path)\n",
-    "num_trials, num_channels, num_freqs, num_timesteps = data.shape"
+    "# num_trials, num_channels, num_freqs, num_timesteps = data.shape"
    ]
   },
   {
@@ -161,12 +161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "id": "bad1051f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_LDA_model(data, y, channel, time, time_resolution):\n",
+    "    num_trials, num_channels, num_freqs, num_timesteps = data.shape\n",
     "\n",
     "    # Checks that inputted value for time resolution is valid\n",
     "    if not(num_timesteps % time_resolution == 0):\n",
@@ -218,35 +219,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 25,
    "id": "e258963f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code to train LDA model for all channels and timepoints for Subject 6\n",
-    "time_resolution = 2\n",
-    "rescaled_timesteps = int(num_timesteps/time_resolution)\n",
+    "def calculate_LDA_metrics(data, y, time_resolution):\n",
+    "    # Code to train LDA model for all channels and timepoints for Subject 6\n",
+    "    num_trials, num_channels, num_freqs, num_timesteps = data.shape\n",
+    "    rescaled_timesteps = int(num_timesteps/time_resolution)\n",
     "\n",
-    "# A dictionary that stores all the metrics of the LDA model\n",
-    "metrics = {\n",
-    "    'Best Scores' : np.zeros((num_channels, rescaled_timesteps)),\n",
-    "    'Decision Values' : np.zeros((num_channels, rescaled_timesteps, num_trials)),\n",
-    "    'T Stats' : np.zeros((num_channels,rescaled_timesteps)),\n",
-    "    'Low Bet Average Powers' : np.zeros((num_channels, rescaled_timesteps, len(y) - y.sum(), num_freqs)),\n",
-    "    'High Bet Average Powers' : np.zeros((num_channels, rescaled_timesteps, y.sum(), num_freqs)),\n",
-    "    'Time Resolution' : time_resolution\n",
-    "}\n",
+    "    # A dictionary that stores all the metrics of the LDA model\n",
+    "    metrics = {\n",
+    "        'Best Scores' : np.zeros((num_channels, rescaled_timesteps)),\n",
+    "        'Decision Values' : np.zeros((num_channels, rescaled_timesteps, num_trials)),\n",
+    "        'T Stats' : np.zeros((num_channels,rescaled_timesteps)),\n",
+    "        'Low Bet Average Powers' : np.zeros((num_channels, rescaled_timesteps, len(y) - int(y.sum()), num_freqs)),\n",
+    "        'High Bet Average Powers' : np.zeros((num_channels, rescaled_timesteps, int(y.sum()), num_freqs)),\n",
+    "        'Time Resolution' : time_resolution\n",
+    "    }\n",
     "\n",
-    "# dvals = np.zeros((num_channels, rescaled_timesteps, num_trials))\n",
-    "# t_stats = np.zeros((num_channels,rescaled_timesteps))\n",
-    "# best_scores = np.zeros((num_channels, rescaled_timesteps))\n",
-    "# low_bet_avg_powers = np.zeros((rescaled_timesteps, len(y) - y.sum(), num_freqs))\n",
-    "# high_bet_avg_powers = np.zeros((rescaled_timesteps, y.sum(), num_freqs))\n",
-    "\n",
-    "for channel in range(num_channels):\n",
-    "    for time in range(rescaled_timesteps):\n",
-    "        # best_scores[channel, time], dvals[:, time], t_stats[channel,time], low_bet_avg_powers[time,:,:], high_bet_avg_powers[time,:,:] = train_LDA_model(data=data, y=y, channel=channel, time=time*time_resolution, time_resolution=time_resolution)\n",
-    "        metrics['Best Scores'][channel, time], metrics['Decision Values'][:, time], metrics['T Stats'][channel, time], metrics['Low Bet Average Powers'][channel, time], metrics['High Bet Average Powers'][channel, time] = train_LDA_model(data=data, y=y, channel=channel, time=time*time_resolution, time_resolution=time_resolution)"
+    "    for channel in range(num_channels):\n",
+    "        for time in range(rescaled_timesteps):\n",
+    "            metrics['Best Scores'][channel, time], metrics['Decision Values'][:, time], metrics['T Stats'][channel, time], metrics['Low Bet Average Powers'][channel, time], metrics['High Bet Average Powers'][channel, time] = train_LDA_model(data=data, y=y, channel=channel, time=time*time_resolution, time_resolution=time_resolution)\n",
+    "    \n",
+    "    return metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "17ffd4f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = calculate_LDA_metrics(data,y,time_resolution=2)"
    ]
   },
   {
@@ -260,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2422fc62",
    "metadata": {},
    "outputs": [],
@@ -302,53 +309,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "id": "f357d935",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_shuffled_t_stats(data, y, num_channels, num_timesteps, num_trials):\n",
-    "    np.random.seed()\n",
-    "    time_resolution = 2\n",
-    "    rescaled_timesteps = int(num_timesteps/time_resolution)\n",
-    "\n",
-    "    dvals = np.zeros((num_channels, rescaled_timesteps, num_trials))\n",
-    "    t_stats = np.zeros((num_channels,rescaled_timesteps))\n",
-    "    best_scores = np.zeros((num_channels, rescaled_timesteps))\n",
-    "    bet_avg_power = np.zeros((2, num_freqs, rescaled_timesteps))\n",
+    "def get_shuffled_t_stats(data, y):\n",
+    "  np.random.seed()\n",
+    "  y_shuffled = shuffle_y(y)\n",
+    "  metrics = calculate_LDA_metrics(data=data, y=y_shuffled, time_resolution=2)\n",
     "    \n",
-    "    y_shuffled = shuffle_y(y)\n",
-    "    \n",
-    "    for channel in range(num_channels):\n",
-    "        for time in range(num_timesteps):\n",
-    "          best_scores[channel,time], dvals[:,time], t_stats[channel,time], bet_avg_power[:,time] = train_LDA_model(data, y_shuffled, channel, time)\n",
-    "    \n",
-    "    return t_stats"
+    "  return metrics['T Stats']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": null,
    "id": "5388406b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[289], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m      6\u001b[0m     \u001b[39mwith\u001b[39;00m Pool(n_processes) \u001b[39mas\u001b[39;00m p:\n\u001b[0;32m----> 7\u001b[0m         results \u001b[39m=\u001b[39m p\u001b[39m.\u001b[39mstarmap(get_shuffled_t_stats, [(data, y, num_channels, num_timesteps, num_trials)] \u001b[39m*\u001b[39m \u001b[39m2\u001b[39m)\n\u001b[1;32m      8\u001b[0m         pool\u001b[39m.\u001b[39mclose()\n",
-      "File \u001b[0;32m~/miniconda3/envs/ncsl/lib/python3.11/multiprocessing/pool.py:375\u001b[0m, in \u001b[0;36mPool.starmap\u001b[0;34m(self, func, iterable, chunksize)\u001b[0m\n\u001b[1;32m    369\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstarmap\u001b[39m(\u001b[39mself\u001b[39m, func, iterable, chunksize\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m    370\u001b[0m \u001b[39m    \u001b[39m\u001b[39m'''\u001b[39;00m\n\u001b[1;32m    371\u001b[0m \u001b[39m    Like `map()` method but the elements of the `iterable` are expected to\u001b[39;00m\n\u001b[1;32m    372\u001b[0m \u001b[39m    be iterables as well and will be unpacked as arguments. Hence\u001b[39;00m\n\u001b[1;32m    373\u001b[0m \u001b[39m    `func` and (a, b) becomes func(a, b).\u001b[39;00m\n\u001b[1;32m    374\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m--> 375\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_map_async(func, iterable, starmapstar, chunksize)\u001b[39m.\u001b[39mget()\n",
-      "File \u001b[0;32m~/miniconda3/envs/ncsl/lib/python3.11/multiprocessing/pool.py:768\u001b[0m, in \u001b[0;36mApplyResult.get\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    767\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget\u001b[39m(\u001b[39mself\u001b[39m, timeout\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m--> 768\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwait(timeout)\n\u001b[1;32m    769\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mready():\n\u001b[1;32m    770\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mTimeoutError\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/envs/ncsl/lib/python3.11/multiprocessing/pool.py:765\u001b[0m, in \u001b[0;36mApplyResult.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    764\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwait\u001b[39m(\u001b[39mself\u001b[39m, timeout\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m--> 765\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_event\u001b[39m.\u001b[39mwait(timeout)\n",
-      "File \u001b[0;32m~/miniconda3/envs/ncsl/lib/python3.11/threading.py:622\u001b[0m, in \u001b[0;36mEvent.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    620\u001b[0m signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_flag\n\u001b[1;32m    621\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m signaled:\n\u001b[0;32m--> 622\u001b[0m     signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_cond\u001b[39m.\u001b[39mwait(timeout)\n\u001b[1;32m    623\u001b[0m \u001b[39mreturn\u001b[39;00m signaled\n",
-      "File \u001b[0;32m~/miniconda3/envs/ncsl/lib/python3.11/threading.py:320\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    318\u001b[0m \u001b[39mtry\u001b[39;00m:    \u001b[39m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[1;32m    319\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 320\u001b[0m         waiter\u001b[39m.\u001b[39macquire()\n\u001b[1;32m    321\u001b[0m         gotit \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    322\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from multiprocessing import Pool\n",
     "\n",
@@ -356,7 +335,7 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    with Pool(n_processes) as p:\n",
-    "        results = p.starmap(get_shuffled_t_stats, [(data, y, num_channels, num_timesteps, num_trials)] * 2)\n",
+    "        results = p.starmap(get_shuffled_t_stats, [(data, y)] * 3)\n",
     "        p.close()"
    ]
   },
@@ -368,9 +347,9 @@
    "outputs": [],
    "source": [
     "import multiprocessing\n",
-    "n_processes = 2\n",
+    "n_processes = 3\n",
     "pool = multiprocessing.Pool(processes= n_processes)\n",
-    "results = pool.starmap(get_shuffled_t_stats, [(data, y, num_channels, num_timesteps, num_trials)] * 2)\n",
+    "results = pool.starmap(get_shuffled_t_stats, [(data, y)] * 2)\n",
     "pool.close()"
    ]
   },
@@ -497,12 +476,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 11,
    "id": "526d63af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_sorted_scores(best_scores_max_sorted):\n",
+    "def plot_sorted_scores(metrics, best_scores_max_sorted):\n",
+    "    num_trials, num_channels, num_freqs, num_timesteps = data.shape\n",
+    "    \n",
     "    fig, axs = plt.subplots(3, 1, figsize=(24, 18))\n",
     "\n",
     "    axs[0].set_title('Sorted Peak Score of LDA Models (from greatest to least)')\n",
@@ -519,7 +500,7 @@
     "    axs[2].set_title('Time of Peak Score of LDA Models')\n",
     "    axs[2].set_ylabel('Time (seconds)')\n",
     "    axs[2].set_xlabel('Channels (from most to least accurate)')\n",
-    "    time = best_scores_max_sorted[:,1]/(20/time_resolution) -3\n",
+    "    time = best_scores_max_sorted[:,1]/(20/metrics['Time Resolution']) -3\n",
     "    axs[2].scatter(np.arange(0, num_channels), time)\n",
     "    \n",
     "    plt.savefig('accuracy_plots/sorted_accuracies.png')\n",
@@ -528,18 +509,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 20,
    "id": "7903e6e3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Plots the model accuracy as a function of time for the top performing channels, number of plots specified by \"num_plots\"\n",
     "def plot_sorted_scores_per_channel(num_plots, metrics, best_scores_max_sorted):\n",
-    "    fig, axs = plt.subplots(num_plots, 1, figsize=(24, 6 * num_plots))\n",
+    "    num_trials, num_channels, num_freqs, num_timesteps = data.shape\n",
     "\n",
     "    time_resolution = metrics['Time Resolution']\n",
-    "    times = (np.arange(0, 100/time_resolution, 1) / (20/time_resolution)) - 3 # time 0 seconds denotes when the subject starts moving \n",
+    "    rescaled_timesteps = int(num_timesteps/time_resolution)\n",
+    "    times = (np.arange(0, rescaled_timesteps, 1) / (20/time_resolution)) - 3 # time 0 seconds denotes when the subject starts moving \n",
     "\n",
+    "    fig, axs = plt.subplots(num_plots, 1, figsize=(24, 6 * num_plots))\n",
+    "    \n",
     "    for i, trial_data in enumerate(best_scores_max_sorted[:num_plots]):\n",
     "        channel, time, peak_accuracy = trial_data\n",
     "        time = time/(20/time_resolution) - 3\n",
@@ -557,14 +541,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 13,
    "id": "a3405726",
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_power_heatmap(data, num_plots, metrics, best_scores_max_sorted):\n",
+    "    num_trials, num_channels, num_freqs, num_timesteps = data.shape\n",
     "    time_resolution = metrics['Time Resolution']\n",
-    "    \n",
+    "    rescaled_timesteps = int(num_timesteps/time_resolution)\n",
+    "\n",
     "    num_x_ticks = 21\n",
     "    num_y_ticks = 10\n",
     "\n",
@@ -605,12 +591,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "090a77da",
+   "execution_count": 14,
+   "id": "45911369",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_scores(num_channels, metrics):\n",
+    "def sort_scores(data, metrics):\n",
+    "    num_trials, num_channels, num_freqs, num_timesteps = data.shape\n",
     "    best_scores_max = np.zeros((num_channels,3))\n",
     "\n",
     "    for channel in range(num_channels):\n",
@@ -618,21 +605,34 @@
     "        best_scores_max[channel, 1] = list(metrics['Best Scores'][channel]).index(max(metrics['Best Scores'][channel])) # the time point at which the maximum accuracy occurs\n",
     "        best_scores_max[channel, 2] = max(metrics['Best Scores'][channel]) # value of the max score in a particular channel for all time points\n",
     "\n",
-    "    best_scores_max_sorted = best_scores_max[best_scores_max[:,2].argsort()[::-1]]\n",
-    "    \n",
-    "    elec_names_sorted = elec_names[best_scores_max[:,2].argsort()[::-1]]\n",
-    "    elec_areas_sorted = elec_areas[best_scores_max[:,2].argsort()[::-1]]\n",
+    "    sorted_indices = best_scores_max[:,2].argsort()[::-1]\n",
     "\n",
-    "    plot_sorted_scores(best_scores_max_sorted)\n",
+    "    best_scores_max_sorted = best_scores_max[sorted_indices]\n",
+    "    elec_names_sorted = elec_names[sorted_indices]\n",
+    "    elec_areas_sorted = elec_areas[sorted_indices]\n",
+    "    \n",
+    "    return best_scores_max_sorted, elec_names_sorted, elec_areas_sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "090a77da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_scores(data, metrics):\n",
+    "    best_scores_max_sorted, elec_names_sorted, elec_areas_sorted = sort_scores(data, metrics)\n",
+    "    plot_sorted_scores(metrics, best_scores_max_sorted)\n",
     "    plot_sorted_scores_per_channel(10, metrics, best_scores_max_sorted)\n",
-    "    plot_power_heatmap(data, 10, metrics=metrics, best_scores_max_sorted=best_scores_max_sorted)\n",
+    "    plot_power_heatmap(data, 10, metrics, best_scores_max_sorted)\n",
     "\n",
     "    return (elec_names_sorted, elec_areas_sorted)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 21,
    "id": "aa90da56",
    "metadata": {},
    "outputs": [
@@ -758,12 +758,12 @@
     }
    ],
    "source": [
-    "elec_sorted = plot_scores(num_channels, metrics)"
+    "elec_sorted = plot_scores(data, metrics)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 22,
    "id": "9e29ec79",
    "metadata": {},
    "outputs": [
@@ -841,7 +841,7 @@
        "        'white matter', 'parietal operculum L', 'PZ'], dtype='<U44'))"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
